Smooth the menu and fix flickering

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,10 @@ p {
 
 .navbar-nav>li>a {
 	line-height: 40px;
+
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
 }
 
 .profile-menu-item-on {
@@ -221,6 +225,8 @@ p {
 	-moz-transition: all 0.3s ease;
 	-ms-transition: all 0.3s ease;
 	-o-transition: all 0.3s ease;
+
+	-webkit-backface-visibility: hidden;
 }
 
 .animate:hover {
